--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           </div>
         </div>
       </div>
-      <section class="history">
+      <section class="history" id="about">
         <div class="container">
           <div class="history__inner">
             <div class="history__image" style="background-image: url('img/monitor.jpg')"></div>
@@ -251,7 +251,7 @@
           </div>
         </div>
       </section>
-      <section class="recent">       
+      <section class="recent" id="portfolio">       
         <div class="container">   
           <div class="recent__header section-header">
             <h3 class="section-header__title">Recent works</h3>
@@ -509,7 +509,7 @@
           <div class="partners__logos"><a class="partner__logo-item" href=""><img class="partner__logo-img-dim" src="img/logo-1.jpg" alt="logo"/><img class="partner__logo-img-bright" src="img/c-logo-1.jpg" alt="logo"/></a><a class="partner__logo-item" href=""><img class="partner__logo-img-dim" src="img/logo-2.jpg" alt="logo"/><img class="partner__logo-img-bright" src="img/c-logo-2.jpg" alt="logo"/></a><a class="partner__logo-item" href=""><img class="partner__logo-img-dim" src="img/logo-3.jpg" alt="logo"/><img class="partner__logo-img-bright" src="img/c-logo-3.jpg" alt="logo"/></a><a class="partner__logo-item" href=""><img class="partner__logo-img-dim" src="img/logo-4.jpg" alt="logo"/><img class="partner__logo-img-bright" src="img/c-logo-4.jpg" alt="logo"/></a><a class="partner__logo-item" href=""><img class="partner__logo-img-dim" src="img/logo-5.jpg" alt="logo"/><img class="partner__logo-img-bright" src="img/c-logo-5.jpg" alt="logo"/></a><a class="partner__logo-item" href=""><img class="partner__logo-img-dim" src="img/logo-6.jpg" alt="logo"/><img class="partner__logo-img-bright" src="img/c-logo-6.jpg" alt="logo"/></a><a class="partner__logo-item" href=""><img class="partner__logo-img-dim" src="img/logo-7.jpg" alt="logo"/><img class="partner__logo-img-bright" src="img/c-logo-7.jpg" alt="logo"/></a><a class="partner__logo-item" href=""><img class="partner__logo-img-dim" src="img/logo-8.jpg" alt="logo"/><img class="partner__logo-img-bright" src="img/c-logo-8.jpg" alt="logo"/></a><a class="partner__logo-item" href=""><img class="partner__logo-img-dim" src="img/logo-9.jpg" alt="logo"/><img class="partner__logo-img-bright" src="img/c-logo-9.jpg" alt="logo"/></a><a class="partner__logo-item" href=""><img class="partner__logo-img-dim" src="img/logo-10.jpg" alt="logo"/><img class="partner__logo-img-bright" src="img/c-logo-10.jpg" alt="logo"/></a></div>
         </div>
       </section>
-      <section class="blog">
+      <section class="blog" id="blog">
         <div class="container">
           <div class="blog__header section-header">
             <h3 class="section-header__title">Our blog</h3>
@@ -587,8 +587,7 @@
             <form class="form__form client-form js-form">
               <div class="client-form__success">
                 <div class="client-form__close js-formSuccess-close"></div>
-                <p class="client-form__success-message">Отправлено</p>
-                <div class="client-form__img"></div>
+                <p class="client-form__success-message">Ваше сообщение отправлено. </p>
               </div>
               <div class="client-form__item">
                 <label class="client-form__label" for="">
